# DeliveraX

./: .dockerignore  .env.example  .gitignore  README.md  STAGE_CONTRACT.md  docker-compose.dev.yml  findings.md  findings_codetest.md  progress.md  progress_codetest.md  task_plan.md  task_plan_codetest.md
RequirementsAnalysis/: .gitignore  MIGRATION_MAP.md  README.md  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json
RequirementsAnalysis/agent/: __init__.py  markdown_renderer.py  models.py  prompts.py  runner.py
RequirementsAnalysis/agent/providers/: base.py  deepseek.py
RequirementsAnalysis/outputs/run_20260501_073421/: report.json  requirement_prd.md  requirement_spec.json
RequirementsAnalysis/outputs/run_20260501_073517/: report.json  requirement_prd.md  requirement_spec.json
RequirementsAnalysis/outputs/smoke_test/: report.json  requirement_prd.md  requirement_spec.json
RequirementsAnalysis/requirement-agent/: README.md  boundaryValidator.ts  example.ts  inputValidator.ts  markdownRenderer.ts  requirementAgent.test.ts  sample-output.md
RequirementsAnalysis/requirement-agent/requirement-agent/: deepseekLlmCall.ts  index.ts  prompts.ts  specValidator.ts  (+3 more)
RequirementsAnalysis/requirement_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
RequirementsAnalysis/tests/: test_local_debug.py  test_requirement_agent.py
agents/requirement_analysis/: .gitignore  README.md  __init__.py  boundary_validator.py  input_validator.py  local_debug.py  markdown_renderer.py  prompts.py  pyproject.toml  run.py  runner.py  spec_validator.py  stage.py
(+385 files in other folders)
