[project]
name = "req-analysis"
version = "0.1.0"
description = "DeliveraX requirement analysis stage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["requirement_analysis"]
exclude = ["outputs", "samples", "tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
